apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsGroup: 106
        fsGroup: 106
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: jellyfin
          image: ghcr.io/hotio/jellyfin:release-10.10.3
          securityContext:
            privileged: true
          ports:
            - containerPort: 8096
          volumeMounts:
            - mountPath: /dev/dri/renderD128
              name: renderd128
            - mountPath: /data/media
              name: data
            - mountPath: /config
              name: config
      volumes:
        - name: renderd128
          hostPath:
            path: /dev/dri/renderD128
            type: CharDevice
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
